--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -150,7 +150,7 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<!--=======  Copyright text  =======-->
-					<p class="copyright-text">{{trans('Plentymarket::Common.copyright')}}</p>
+					<p class="copyright-text">{{services.translate.trans('Plentymarket::Common.copyright')}}</p>
 					<!--=======  End of Copyright text  =======-->
 				</div>
 			</div>
