--- a/resources/views/index/blog.twig
+++ b/resources/views/index/blog.twig
@@ -46,7 +46,7 @@
 					<!--=======  Share post area  =======-->
 
 					<div class="social-share-buttons mb-40">
-						<h3>{{trans('Plentymarket::WebIndexBlog.share_this_post')}}</h3>
+						<h3>{{services.translate.trans('Plentymarket::WebIndexBlog.share_this_post')}}</h3>
 						<ul>
 							<li><a class="twitter"><i class="fa fa-twitter"></i></a></li>
 							<li><a class="facebook"><i class="fa fa-facebook"></i></a></li>
