--- a/resources/views/account/cart.twig
+++ b/resources/views/account/cart.twig
@@ -17,13 +17,13 @@
 							<table class="table">
 								<thead>
 								<tr>
-									<th class="pro-thumbnail">{{trans('Plentymarket::WebAccountCart.image')}}</th>
-									<th class="pro-title">{{trans('Plentymarket::WebAccountCart.product')}}</th>
-									<th class="pro-price">{{trans('Plentymarket::WebAccountCart.price')}}</th>
-									<th class="pro-vat">{{trans('Plentymarket::WebAccountCart.vat')}}</th>
-									<th class="pro-quantity">{{trans('Plentymarket::WebAccountCart.quantity')}}</th>
-									<th class="pro-subtotal">{{trans('Plentymarket::WebAccountCart.total')}}</th>
-									<th class="pro-remove">{{trans('Plentymarket::WebAccountCart.remove')}}</th>
+									<th class="pro-thumbnail">{{services.translate.trans('Plentymarket::WebAccountCart.image')}}</th>
+									<th class="pro-title">{{services.translate.trans('Plentymarket::WebAccountCart.product')}}</th>
+									<th class="pro-price">{{services.translate.trans('Plentymarket::WebAccountCart.price')}}</th>
+									<th class="pro-vat">{{services.translate.trans('Plentymarket::WebAccountCart.vat')}}</th>
+									<th class="pro-quantity">{{services.translate.trans('Plentymarket::WebAccountCart.quantity')}}</th>
+									<th class="pro-subtotal">{{services.translate.trans('Plentymarket::WebAccountCart.total')}}</th>
+									<th class="pro-remove">{{services.translate.trans('Plentymarket::WebAccountCart.remove')}}</th>
 								</tr>
 								</thead>
 								<tbody>
@@ -90,14 +90,14 @@
 							<!--=======  Discount Coupon  =======-->
 
 							<div class="discount-coupon">
-								<h4>{{trans('Plentymarket::WebAccountCart.discount_coupon_code')}}</h4>
+								<h4>{{services.translate.trans('Plentymarket::WebAccountCart.discount_coupon_code')}}</h4>
 								<form id="coupon_form">
 									<div class="row">
 										<div class="col-md-6 col-12 mb-25">
-											<input type="text" placeholder="{{trans('Plentymarket::WebAccountCart.coupon_code')}}">
+											<input type="text" placeholder="{{services.translate.trans('Plentymarket::WebAccountCart.coupon_code')}}">
 										</div>
 										<div class="col-md-6 col-12 mb-25">
-											<input type="submit" value="{{trans('Plentymarket::WebAccountCart.apply_code')}}">
+											<input type="submit" value="{{services.translate.trans('Plentymarket::WebAccountCart.apply_code')}}">
 										</div>
 									</div>
 								</form>
@@ -112,16 +112,20 @@
 
 							<div class="cart-summary">
 								<div class="cart-summary-wrap">
-									<h4>{{trans('Plentymarket::WebAccountCart.cart_summary')}}</h4>
-									<p>{{trans('Plentymarket::WebAccountCart.sub_total')}}<span>{{total}}</span></p>
-									<p>{{trans('Plentymarket::WebAccountCart.vat')}}<span>{{vat}}</span></p>
-									<p>{{trans('Plentymarket::WebAccountCart.shipping_cost')}}<span>{{ship}}</span></p>
-									<h2>{{trans('Plentymarket::WebAccountCart.grand_total')}} <span>{{summary}}</span>
+									<h4>{{services.translate.trans('Plentymarket::WebAccountCart.cart_summary')}}</h4>
+									<p>{{services.translate.trans('Plentymarket::WebAccountCart.sub_total')}}
+										<span>{{total}}</span></p>
+									<p>{{services.translate.trans('Plentymarket::WebAccountCart.vat')}}
+										<span>{{vat}}</span></p>
+									<p>{{services.translate.trans('Plentymarket::WebAccountCart.shipping_cost')}}
+										<span>{{ship}}</span></p>
+									<h2>{{services.translate.trans('Plentymarket::WebAccountCart.grand_total')}}
+										<span>{{summary}}</span>
 									</h2>
 								</div>
 								<div class="cart-summary-button">
-									<a class="checkout-btn" href="/account/checkout">{{trans('Plentymarket::WebAccountCart.checkout')}}</a>
-									<button class="update-btn">{{trans('Plentymarket::WebAccountCart.update_cart')}}</button>
+									<a class="checkout-btn" href="/account/checkout">{{services.translate.trans('Plentymarket::WebAccountCart.checkout')}}</a>
+									<button class="update-btn">{{services.translate.trans('Plentymarket::WebAccountCart.update_cart')}}</button>
 								</div>
 							</div>
 
@@ -133,20 +137,20 @@
 				{%else%}
 					<div class="cart empty">
 						<div class="page-title" style="border-bottom: 1px solid #000;">
-							<h1>{{trans('Plentymarket::WebAccountCart.shopping_basket')}}</h1>
+							<h1>{{services.translate.trans('Plentymarket::WebAccountCart.shopping_basket')}}</h1>
 						</div>
 						<div class="cart-empty">
 							<p style="background-color: #fefad7;
     padding: 15px;
     margin-top: 15px;font-size: 14px;
-    font-weight: 400;">{{trans('Plentymarket::WebAccountCart.basket_empty_desc')}}</p>
+    font-weight: 400;">{{services.translate.trans('Plentymarket::WebAccountCart.basket_empty_desc')}}</p>
 							<div class="buttons-set">
-								<a href="/" title="{{trans('Plentymarket::WebAccountCart.continue_shopping')}}" class="checkout-btn" style="font-weight: 400;
+								<a href="/" title="{{services.translate.trans('Plentymarket::WebAccountCart.continue_shopping')}}" class="checkout-btn" style="font-weight: 400;
     text-transform: uppercase;
     color: #ffffff;
     background-color: #1e1e1e;
     border-color: #1e1e1e;    padding: 15px;">
-									<span class="button_label">{{trans('Plentymarket::WebAccountCart.continue_shopping')}}</span>
+									<span class="button_label">{{services.translate.trans('Plentymarket::WebAccountCart.continue_shopping')}}</span>
 								</a>
 							</div>
 						</div>
@@ -167,7 +171,7 @@
     $("#coupon_form").on("submit", function()
     {
         spop({
-            template: '{{trans('Plentymarket::WebAccountCart.coupon_not_avaliable')}}',
+            template: '{{services.translate.trans('Plentymarket::WebAccountCart.coupon_not_avaliable')}}',
             style: "error"
         });
 
