--- a/resources/views/index/blog-list.twig
+++ b/resources/views/index/blog-list.twig
@@ -90,7 +90,7 @@
 												<p class="post-excerpt">
 													{{item.data.post.shortDescription}}
 												</p>
-												<a href="/index/blog/{{item.id}}" class="blog-readmore-btn">{{trans('Plentymarket::WebIndexBlogList.continue')}}
+												<a href="/index/blog/{{item.id}}" class="blog-readmore-btn">{{services.translate.trans('Plentymarket::WebIndexBlogList.continue')}}
 													<i class="fa fa-long-arrow-right"></i></a>
 											</div>
 										</div>
