--- a/resources/views/common/footer.twig
+++ b/resources/views/common/footer.twig
@@ -15,8 +15,10 @@
 						<!--=======  Single block  =======-->
 						<div class="single-block mb-35">
 							<h3 class="footer-title">Contact Us</h3>
-							<p>Phone: {{services.config.getTemplateConfig('basic.phone')}}</p>
-							<p>Email: {{services.config.getTemplateConfig('basic.email')}}</p>
+							<p>Phone:</p>
+							<p>{{services.config.getTemplateConfig('basic.phone')}}</p>
+							<p>Email:</p>
+							<p>{{services.config.getTemplateConfig('basic.email')}}</p>
 						</div>
 						<!--=======  End of Single block  =======-->
 					</div>
@@ -70,7 +72,7 @@
 					<!--=======  End of single footer  =======-->
 				</div>
 
-				<div class="col-12 col-lg-4 col-md-6 col-sm-6">
+				<div class="col-6 col-lg-2 col-md-3 col-sm-3">
 					<!--=======  single footer  =======-->
 					<div class="single-footer">
 						<h3 class="footer-title mb-20">Address</h3>
